--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
-    <div class="container card mt-3">
-    <h1>Register</h1>
+    <div class="container card mt-3 flex mb-3">
+    <h1>Inscription</h1>
 
     {{ form_errors(registrationForm) }}
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.pseudo) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Mot de passe'
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+        {{ form_row(registrationForm.plainPasswordVerif, {
+            label: 'Confirmation'
+        }) }}
+        {{ form_widget(registrationForm) }}
+        <button type="submit" class="btn btn-success w-100 mb-3">S'inscrire</button>
     {{ form_end(registrationForm) }}
     </div>
 {% endblock %}
