--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,12 @@
 body {
-    background-color: skyblue;
+background-color: #B4EBE6;
+
+}
+
+.mt-10{
+    margin-top: 10%;
+}
+
+.sh-white{
+box-shadow: 0 4px 6px rgba(255, 255, 255, 0.7);
 }
