Login & Profil ok (avec un beau css maison)

--- a/templates/_navBar.html.twig
+++ b/templates/_navBar.html.twig
@@ -16,7 +16,7 @@
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" title="Sites">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" title="Mon Profil">Mon profil</a>
+                    <a class="nav-link active" aria-current="page" href="{{ path('app_profil')}}"  title="Profil">Mon profil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" title="Connection">Connection</a>
