--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10,3 +10,20 @@ background-color: #B4EBE6;
 .sh-white{
 box-shadow: 0 4px 6px rgba(255, 255, 255, 0.7);
 }
+
+
+.gradient-custom {
+    /* fallback for old browsers */
+    background: #f6d365;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
+}
+
+.zoom {
+    transform: scale(1.4); /* Increase size by 20% */
+    transform-origin: center; /* Keeps the zoom centered */
+}
