Début modif et photo

--- a/templates/user/Profil.html.twig
+++ b/templates/user/Profil.html.twig
@@ -17,7 +17,13 @@
                                          alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
                                     <h5>{{ pseudo }}</h5>
                                     <p>{{ nom }} {{ prenom }}</p>
-                                    <i class="far fa-edit mb-5"></i>
+                                    <i class="far fa-edit mb-5">
+
+
+                                                <a type="button" class="btn btn-primary" href="{{ path('app_main') }}">modifier</a>
+
+
+                                    </i>
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body p-4">
