--- a/templates/_navBar.html.twig
+++ b/templates/_navBar.html.twig
@@ -19,7 +19,7 @@
                     <a class="nav-link active" aria-current="page" href="{{ path('app_profil')}}"  title="Profil">Mon profil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" title="Connection">Connection</a>
+                    <a class="nav-link active" href="{{ path('app_login') }}" tabindex="-1" aria-disabled="true" title="Connection">Connection</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" title="Se déconnecter">Se déconnecter</a>
