--- a/templates/user/Profil.html.twig
+++ b/templates/user/Profil.html.twig
@@ -18,11 +18,7 @@
                                     <h5>{{ pseudo }}</h5>
                                     <p>{{ nom }} {{ prenom }}</p>
                                     <i class="far fa-edit mb-5">
-
-
-                                                <a type="button" class="btn btn-primary" href="{{ path('app_main') }}">modifier</a>
-
-
+                                                <a type="button" class="btn btn-primary" href="{{ path('app_user_crud_edit') }}">Modifier</a>
                                     </i>
                                 </div>
                                 <div class="col-md-8">
