Delete user Route view modif + sortie

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <h1>Bienvenue sur la page d'accueil</h1>
-
+    <h1>Bienvenue sur la page d'accueil = Liste des sorties</h1>
+    <h2> Voici la liste des sorties</h2>
 
 {% endblock %}
