--- a/templates/_navBar.html.twig
+++ b/templates/_navBar.html.twig
@@ -3,17 +3,17 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Sortir.com(+Logo)</a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#" title="Ville">Villes</a>
+                    <a class="nav-link active" aria-current="page" href="{{ path('sortie_creer') }}" title="Ville">Proposer une sortie</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sites</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" title="Sites">Accueil</a>
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" title="Sites">Liste des sorties</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ path('app_profil')}}"  title="Profil">Mon profil</a>
