list les sorties publie, details de sortie, afficher les participant et consulter leur profil.

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,6 +5,43 @@
 {% block body %}
 
     <h1>Bienvenue sur la page d'accueil</h1>
+<div class="p-5">
+    <div class="row">
+
+    {% for sortie in sorties %}
+
+        <div class="col-sm-6 ">
+            <div class="card mb-5">
+                <div class="card-body">
+                    <h5 class="card-title text-center">{{ sortie.nom }}</h5>
+                    <p class="card-text">Date de Sortie: {{ sortie.dateHeureDebut | date('d/m/Y H:i:s')  }}</p>
+                    <p class="card-text">Clôture : {{ sortie.dateLimiteInscription | date('d/m/Y H:i:s')  }}</p>
+                    {% if app.user in sortie.participants  %}
+                        <p class="alert alert-primary w-50" role="alert">Vous étes inscrit a cette sortie</p>
+                    {% endif %}
+                    <p class="card-text">Organisateur : {{ sortie.organisateur.nom}}</p>
+                    <a href="{{ path('sortie_detail', {'id': sortie.id}) }}" class="btn btn-primary">detail</a>
+                </div>
+            </div>
+        </div>
+
+    {% endfor %}
+    </div>
+</div>
+
+
+
+    <script>
+
+        let toastEl = document.getElementById('myToast');
+        let toast = new bootstrap.Toast(toastEl);
+        document.getElementById('showToastBtn').addEventListener('click', function () {
+            toast.show();
+        });
+    </script>
 
 
 {% endblock %}
+
+
+
