Modal qui marche Yessss

--- a/templates/sortie/annulerModal.html.twig
+++ b/templates/sortie/annulerModal.html.twig
@@ -81,9 +81,9 @@
                     }
                 })
                 .catch(error => {
-                    console.error('Erreur complète:', error);
+                    // console.error('Erreur complète:', error);
                 });
-            console.log('ID de sortie récupéré:', sortieId);
+            // console.log('ID de sortie récupéré:', sortieId);
         });
         });
     });
