--- a/templates/sortie/update.html.twig
+++ b/templates/sortie/update.html.twig
@@ -14,7 +14,9 @@
             <button type="submit" class="btn btn-success w-100 mb-3" name="action" value="publier">Publier la sortie</button>
         </div>
         {{ form_end(form) }}
-
+        {{ if not sortie.isEstPublie() }}
+        <button type="submit" class="btn btn-danger w-100 mb-3" name="action" value="Supprimer">Supprimer la sortie</button>
+        {% if sortie.isEstPublie() %}
         <button type="button"
                 class="btn btn-danger mb-3 w-100"
                 data-bs-toggle="modal"
@@ -22,7 +24,7 @@
                 data-sortie-id="{{ sortieID }}">
             Annuler la Sortie définitivement
         </button>
-
+        {% endif %}
         {# Inclure le modal #}
         {{ render(controller('App\\Controller\\SortieController::modalAction')) }}
     </div>
