--- a/templates/user/Profil.html.twig
+++ b/templates/user/Profil.html.twig
@@ -13,8 +13,14 @@
                             <div class="row g-0">
                                 <div class="col-md-4 gradient-custom text-center text-white"
                                      style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+
+                                    {% if not imageSrc %}
                                     <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
                                          alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
+                                    {% else %}
+                                        <img src="{{ asset(imageSrc) }}" alt="{{ pseudo }}" class="img-fluid my-5" style="width: 80px;" />
+                                    {% endif %}
+
                                     <h5>{{ pseudo }}</h5>
                                     <p>{{ nom }} {{ prenom }}</p>
                                     <i class="far fa-edit mb-5">
