list sortie publie, consulter le profile des participant (updated).

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -12,33 +12,36 @@
 
         <div class="col-sm-6 ">
             <div class="card mb-5">
-                <div class="card-body">
+                <div class="card-body h-300px ">
                     <h5 class="card-title text-center">{{ sortie.nom }}</h5>
                     <p class="card-text">Date de Sortie: {{ sortie.dateHeureDebut | date('d/m/Y H:i:s')  }}</p>
                     <p class="card-text">Clôture : {{ sortie.dateLimiteInscription | date('d/m/Y H:i:s')  }}</p>
                     {% if app.user in sortie.participants  %}
                         <p class="alert alert-primary w-50" role="alert">Vous étes inscrit a cette sortie</p>
+{#                        {% else %}#}
+{#                            <a href="{{ path('sortie_detail', {'id': sortie.id}) }}" class="btn btn-primary">S'inscrire</a>#}
                     {% endif %}
                     <p class="card-text">Organisateur : {{ sortie.organisateur.nom}}</p>
-                    <a href="{{ path('sortie_detail', {'id': sortie.id}) }}" class="btn btn-primary">detail</a>
+                    <a href="{{ path('sortie_detail', {'id': sortie.id}) }}" class="btn btn-outline-info">Afficher</a>
+
+                    {% if app.user == sortie.organisateur %}
+                        <a href="{{ path('sortie_detail', {'id': sortie.id}) }}" class="btn btn-outline-info">Publier</a>
+                        <a href="{{ path('sortie_detail', {'id': sortie.id}) }}" class="btn btn-outline-info">Modifier</a>
+                    {% endif %}
+
+                    {% dump(sortie.organisateur) %}
+
                 </div>
             </div>
         </div>
+
+        {% dump(app.user) %}
 
     {% endfor %}
     </div>
 </div>
 
 
-
-    <script>
-
-        let toastEl = document.getElementById('myToast');
-        let toast = new bootstrap.Toast(toastEl);
-        document.getElementById('showToastBtn').addEventListener('click', function () {
-            toast.show();
-        });
-    </script>
 
 
 {% endblock %}
