--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -27,3 +27,7 @@ box-shadow: 0 4px 6px rgba(255, 255, 255, 0.7);
     transform: scale(1.4); /* Increase size by 20% */
     transform-origin: center; /* Keeps the zoom centered */
 }
+
+.h-300px{
+    height: 300px;
+}
