--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -2,6 +2,11 @@
 
 {% block body %}
     <h1> Details de sortie : {{ sortie.nom }}</h1>
+    {% for message in app.flashes('warning') %}
+        <div class="alert alert-warning">
+            {{ message }}
+        </div>
+    {% endfor %}
     <div class="d-flex justify-content-center mt-10">
         <div class="col-12 col-md-8 col-lg-6 border border-black p-3 rounded-5 shadow p-3 mb-5 bg-body-tertiary rounded d-flex justify-content-between">
 
@@ -17,7 +22,7 @@
 
                 {% else %}
                     {% if date() < sortie.dateLimiteInscription %}
-                    <button type="button" class="btn btn-info">S'inscrire</button>
+                    <a type="button" href="{{ path('sortie_inscrire', {'id': sortie.id}) }}" class="btn btn-info">S'inscrire</a>
                     {% endif%}
                 {% endif %}
             </div>
