UN M%AIL DE RESET DE MDP BORDEL JPP JEJO U3FGBEIYhkgbzeuiljkghrjeiol

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,10 +38,11 @@
 
     <div class="d-flex justify-content-center justify-content-evenly">
     <button  href="{{ path('app_main') }}" class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Connexion
     </button>
+        <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
 
-    <a href="{{ path('app_register') }}" class="btn btn-lg btn-info text-white">Register</a>
+
     </div>
 </form>
 
