--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
     <h1> Details de sortie : {{ sortie.nom }}</h1>
     {% for message in app.flashes('warning') %}
         <div class="alert alert-warning">
@@ -19,6 +20,12 @@
                 <p class="card-text">Organisateur : {{ sortie.organisateur.nom }} {{ sortie.organisateur.prenom }}</p>
                 {% if app.user in sortie.participants %}
                     <p class="alert alert-primary w-50" role="alert">Vous étes inscrit a cette sortie</p>
+                    {% if date() < sortie.dateHeureDebut %}
+                        <a type="button" class="btn btn-danger" href="{{ path('sortie_app_sortie_sedesister', {'id': sortie.id}) }}">Se Désister</a>
+                    {% endif %}
+
+
+
 
                 {% else %}
                     {% if date() < sortie.dateLimiteInscription %}
