--- a/templates/_navBar.html.twig
+++ b/templates/_navBar.html.twig
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-96CEB4">
+
     <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="{{ path('app_main') }}">Navbar</a>
@@ -18,19 +20,26 @@
                 </li>
 
                 {% if app.user %}
-                <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="{{ path('app_profil')}}"  title="Profil">Mon profil</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="{{ path('app_profil') }}" title="Profil">Mon
+                            profil</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link " href="{{path('app_logout')}}" tabindex="-1" aria-disabled="true" title="Se déconnecter">Se déconnecter</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{{ path('app_logout') }}" tabindex="-1" aria-disabled="true"
+                           title="Se déconnecter">Se déconnecter</a>
+                    </li>
+                    <li class="nav-item"><a class="text-black " tabindex="-1" aria-disabled="true"
+                                            title="Bienvenue pseudo">Bienvenue {{ app.user.pseudo }}</a></li>
+
                 {% else %}
                     <li class="nav-item">
-                    <a class="nav-link " href="{{path('app_login')}}" tabindex="-1" aria-disabled="true" title="Connection">Connection</a>
+                        <a class="nav-link " href="{{ path('app_login') }}" tabindex="-1" aria-disabled="true"
+                           title="Connection">Connection</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="{{ path ('app_register') }}" tabindex="-1" aria-disabled="true" title="Inscription">Inscription</a>
+                        <a class="nav-link " href="{{ path ('app_register') }}" tabindex="-1" aria-disabled="true"
+                           title="Inscription">Inscription</a>
                     </li>
                 {% endif %}
             </ul>
