--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -10,10 +10,21 @@
     <div class="row">
 
     <div class="card container m-3">
+
         {{ form_errors(form) }}
         {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit" class="btn btn-success">Filtrer</button>
+        <div style="display: flex; flex-direction: row; width: 100%">
+            <div style="width: 45vw" class="m-3">
+                {{ form_row(form.nom) }}
+                {{ form_row(form.site) }}
+                {{ form_row(form.organisateur) }}
+                {{ form_row(form.participants) }}
+            </div>
+            <div style="width: 45vw" class="m-3">
+                {{ form_row(form.dateHeureDebut) }}
+            </div>
+        </div>
+        <button type="submit" class="btn btn-success mb-3 w-100">Filtrer</button>
         {{ form_end(form) }}
     </div>
 
